adding to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,17 @@
                             <div class="imageRow"></div>
                             <div id="RaspPi">  <img id="PiImg"  src="images/github.png"></img>
                                 <div id="RaspPiTitle"><a href="https://github.com/justinpolchinski/RaspberryPi_Email_MotionCapture">PiCamera + PIR</a></div> 
+                            </div>
+                            <div id="RaspPi">  <img id="PiImg"  src="images/github.png"></img>
+                                <div id="RaspPiTitle"><a href="https://justinpolchinski.github.io/Hangman-Game/">Animal Hangman</a></div> 
                             </div> 
+                            <div id="RaspPi">  <img id="PiImg"  src="images/github.png"></img>
+                                <div id="RaspPiTitle"><a href="https://justinpolchinski.github.io/TriviaGame/">Ticker Trivia</a></div> 
+                            </div>
+                                </br>
+                            <div id="RaspPi">  <img id="PiImg"  src="images/github.png"></img>
+                                <div id="RaspPiTitle"><a href="https://justinpolchinski.github.io/week-4-game/">Crystal Collector</a></div> 
+                            </div>    
                                                           
                     </div>             
                         
