--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,10 @@
                                 </br>
                             <div id="RaspPi">  <img id="PiImg"  src="images/github.png"></img>
                                 <div id="RaspPiTitle"><a href="https://justinpolchinski.github.io/week-4-game/">Crystal Collector</a></div> 
-                            </div>    
+                            </div>  
+                            <div id="RaspPi">  <img id="PiImg"  src="images/github.png"></img>
+                                <div id="RaspPiTitle"><a href="https://github.com/justinpolchinski/bamazon">Bamazon</a></div> 
+                            </div>      
                                                           
                     </div>             
                         
