added friend finder

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,10 @@
                             </div>  
                             <div id="RaspPi">  <img id="PiImg"  src="images/github.png"></img>
                                 <div id="RaspPiTitle"><a href="https://github.com/justinpolchinski/bamazon">Bamazon</a></div> 
-                            </div>      
+                            </div> 
+                            <div id="RaspPi">  <img id="PiImg"  src="images/github.png"></img>
+                                <div id="RaspPiTitle"><a href="https://github.com/justinpolchinski/FriendFinder">Bamazon</a></div> 
+                            </div>           
                                                           
                     </div>             
                         
