added friend finder

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                                 <div id="RaspPiTitle"><a href="https://github.com/justinpolchinski/bamazon">Bamazon</a></div> 
                             </div> 
                             <div id="RaspPi">  <img id="PiImg"  src="images/github.png"></img>
-                                <div id="RaspPiTitle"><a href="https://github.com/justinpolchinski/FriendFinder">Bamazon</a></div> 
+                                <div id="RaspPiTitle"><a href="https://github.com/justinpolchinski/FriendFinder">Friend Finder</a></div> 
                             </div>           
                                                           
                     </div>             
